# mcp-fofa

./: .gitignore  README.md  pyproject.toml
src/mcp_fofa/: __init__.py  __main__.py  server.py
