[project]
name = "mcp_fofa"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.13"
dependencies = [
    "build>=1.3.0",
    "mcp[cli]>=1.12.4",
    "requests>=2.32.4",
    "twine>=6.1.0",
]

[project.scripts]
mcp_fofa = "mcp_fofa:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

